update packaging type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ quarkus.log.min-level=TRACE
 quarkus.log.category."de.cybine.wuf".level=DEBUG
 quarkus.log.category."de.cybine.quarkus".level=DEBUG
 
+quarkus.package.type=uber-jar
 quarkus.shutdown.timeout=5s
 quarkus.live-reload.instrumentation=true
 
